src/app.css
@tailwind base; @tailwind components; @tailwind utilities;
::selection{
  @apply text-white bg-blue-700;
}
body {
  @apply font-zed bg-zinc-50 text-black transition-all duration-300;
}

.unblur-in {
  filter: blur(8px);
  opacity: 0;
  animation-name: unblur;
  animation-fill-mode: forwards;
}
@keyframes unblur {
  0% {
  filter: blur(8px);
  opacity: 0;
  }
  100% {
  filter: blur(0px);
  opacity: 1;
  }
}

.fade-in {
  opacity: 0;
  animation-name: fadeIn;
  animation-duration: 300ms;
  animation-fill-mode: forwards;
}
@keyframes fadeIn {
  0% {
  opacity: 0;
  }
  100% {
  opacity: 1;
  }
}

@media (prefers-reduced-motion: reduce) {
  *{
    animation-duration: 0 !important;
    animation-delay: 0 !important;
    transition-duration: 0 !important;
    transition-delay: 0 !important;
  }
}
@keyframes slide-to-right {
  from {
  opacity: 1;
  transform: translateY(0) scale(1);
  }
}

::view-transition-old(root),
::view-transition-new(root){
  animation-duration: 300ms;
}

